# zonal

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
api/: index.html
configuration/: index.html
docs/: api.md  configuration.md  index.md  logging.md  operations.md
docs/assets/: brand.css
docs/guide/: calling.md  getting-started.md  health-service.md  registering.md
examples/: local_demo.py
guide/calling/: index.html
guide/getting-started/: index.html
guide/health-service/: index.html
guide/registering/: index.html
logging/: index.html
operations/: index.html
search/: search_index.json
src/zonal/: __init__.py  aio_balancer.py  balancer.py  config.py  discovery.py  health.py  imds.py  log.py  model.py  register.py  routing.py
tests/: conftest.py  test_balancer.py  test_discovery.py  test_integration_ministack.py  test_logging.py  test_routing.py
