[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "zonal"
version = "0.1.0"
description = "AZ-affine client-side load balancing over AWS Cloud Map"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
dependencies = [
    "boto3>=1.28",
    "requests>=2.28",
    "structlog>=23",
]

[project.optional-dependencies]
aio = ["aioboto3>=12"]
dev = ["pytest>=7"]
docs = ["mkdocs-material>=9"]

[project.scripts]
zonal-healthcheck = "zonal.health:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires a running MiniStack (docker run -p 4566:4566 ministackorg/ministack)",
]
